Added Videoland images

--- a/index.html
+++ b/index.html
@@ -1,8 +1,51 @@
 <html lang="en">
 <head>
-    <title>Title</title>
+    <title>Videoland</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Title</h1>
+<h1>Videoland</h1>
+<h2>Films</h2>
+<table>
+    <tr>
+        <td>
+            <h3>Subscribed</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Subscribed.png" width="100%"/>
+        </td>
+        <td>
+            <h3>Upsell KPN</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_KPN.png" width="100%"/>
+        </td>
+        <td>
+            <h3>Upsell Telfort</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_Telfort.png" width="100%"/>
+        </td>
+        <td>
+            <h3>Upsell XS4ALL</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_XS4ALL.png" width="100%"/>
+        </td>
+    </tr>
+</table>
+<h2>Series</h2>
+<table>
+    <tr>
+        <td>
+            <h3>Subscribed</h3>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Subscribed.png" width="100%"/>
+        </td>
+        <td>
+            <h3>Upsell KPN</h3>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_KPN.png" width="100%"/>
+        </td>
+        <td>
+            <h3>Upsell Telfort</h3>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_Telfort.png" width="100%"/>
+        </td>
+        <td>
+            <h3>Upsell XS4ALL</h3>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_XS4ALL.png" width="100%"/>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
