--- a/videoland/index.html
+++ b/videoland/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <title>Videoland</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
 <body>
 <h1>Videoland</h1>
