--- a/videoland/index.html
+++ b/videoland/index.html
@@ -5,45 +5,65 @@
 </head>
 <body>
 <h1>Videoland</h1>
-<h2>Films</h2>
 <table>
     <tr>
         <td>
-            <h3>Subscribed</h3>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Subscribed.png" width="100%"/>
-        </td>
-        <td>
-            <h3>Upsell KPN</h3>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_KPN.png" width="100%"/>
-        </td>
-        <td>
-            <h3>Upsell Telfort</h3>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_Telfort.png" width="100%"/>
-        </td>
-        <td>
-            <h3>Upsell XS4ALL</h3>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_XS4ALL.png" width="100%"/>
+            <h3>TVOD</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Huren.png" width="100%"/>
+            <br>
+            <br>
         </td>
     </tr>
-</table>
-<h2>Series</h2>
-<table>
     <tr>
         <td>
-            <h3>Subscribed</h3>
+            <h3>Films Subscribed</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Subscribed.png" width="100%"/>
+            <br>
+            <br>
+        </td>
+        <td>
+            <h3>Films Upsell KPN</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_KPN.png" width="100%"/>
+            <br>
+            <br>
+        </td>
+        <td>
+            <h3>Films Upsell Telfort</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_Telfort.png" width="100%"/>
+            <br>
+            <br>
+        </td>
+        <td>
+            <h3>Films Upsell XS4ALL</h3>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_XS4ALL.png" width="100%"/>
+            <br>
+            <br>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h3>Films Subscribed</h3>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Subscribed.png" width="100%"/>
+            <br>
+            <br>
         </td>
         <td>
-            <h3>Upsell KPN</h3>
+            <h3>Films Upsell KPN</h3>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_KPN.png" width="100%"/>
+            <br>
+            <br>
         </td>
         <td>
-            <h3>Upsell Telfort</h3>
+            <h3>Films Upsell Telfort</h3>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_Telfort.png" width="100%"/>
+            <br>
+            <br>
         </td>
         <td>
-            <h3>Upsell XS4ALL</h3>
+            <h3>Films Upsell XS4ALL</h3>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_XS4ALL.png" width="100%"/>
+            <br>
+            <br>
         </td>
     </tr>
 </table>
