Changed style + fixed typos

--- a/videoland/index.html
+++ b/videoland/index.html
@@ -1,69 +1,51 @@
 <html lang="en">
 <head>
     <title>Videoland</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>Videoland</h1>
 <table>
     <tr>
         <td>
-            <h3>TVOD</h3>
+            <h2>TVOD</h2>
             <img src="https://images.tv.kpn.com/misc/Films/Films_Huren.png" width="100%"/>
-            <br>
-            <br>
         </td>
     </tr>
     <tr>
         <td>
-            <h3>Films Subscribed</h3>
+            <h2>Films Subscribed</h2>
             <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Subscribed.png" width="100%"/>
-            <br>
-            <br>
         </td>
         <td>
-            <h3>Films Upsell KPN</h3>
+            <h2>Films Upsell KPN</h2>
             <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_KPN.png" width="100%"/>
-            <br>
-            <br>
         </td>
         <td>
-            <h3>Films Upsell Telfort</h3>
+            <h2>Films Upsell Telfort</h2>
             <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_Telfort.png" width="100%"/>
-            <br>
-            <br>
         </td>
         <td>
-            <h3>Films Upsell XS4ALL</h3>
+            <h2>Films Upsell XS4ALL</h2>
             <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland_Upsell_XS4ALL.png" width="100%"/>
-            <br>
-            <br>
         </td>
     </tr>
     <tr>
         <td>
-            <h3>Films Subscribed</h3>
+            <h2>Series Subscribed</h2>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Subscribed.png" width="100%"/>
-            <br>
-            <br>
         </td>
         <td>
-            <h3>Films Upsell KPN</h3>
+            <h2>Series Upsell KPN</h2>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_KPN.png" width="100%"/>
-            <br>
-            <br>
         </td>
         <td>
-            <h3>Films Upsell Telfort</h3>
+            <h2>Series Upsell Telfort</h2>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_Telfort.png" width="100%"/>
-            <br>
-            <br>
         </td>
         <td>
-            <h3>Films Upsell XS4ALL</h3>
+            <h2>Series Upsell XS4ALL</h2>
             <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland_Upsell_XS4ALL.png" width="100%"/>
-            <br>
-            <br>
         </td>
     </tr>
 </table>
