--- a/films-series/index.html
+++ b/films-series/index.html
@@ -9,51 +9,51 @@
     <tr>
         <td>
             <h2>Films huren</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Huren.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Huren.png" width="100%"/>
         </td>
         <td>
             <h2>Films op TV</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_OpTV.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_OpTV.png" width="100%"/>
         </td>
         <td>
             <h2>Films Pluspakket</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Pluspakket.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Pluspakket.png" width="100%"/>
         </td>
         <td>
             <h2>Films Kids Pakket</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_KidsPakket.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_KidsPakket.png" width="100%"/>
         </td>
     </tr>
     <tr>
         <td>
             <h2>Films Videoland</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Videoland.png" width="100%"/>
         </td>
         <td>
             <h2>Films Film1</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Film1.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Film1.png" width="100%"/>
         </td>
         <td>
             <h2>Films Erotiek</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Erotiek.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Erotiek.png" width="100%"/>
         </td>
         <td>
             <h2>Films Gay Pakket</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Gay.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Gay.png" width="100%"/>
         </td>
     </tr>
     <tr>
         <td>
             <h2>Films Netflix</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Netflix.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Netflix.png" width="100%"/>
         </td>
         <td>
             <h2>Films YouTube</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_YouTube.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_YouTube.png" width="100%"/>
         </td>
         <td>
             <h2>Films Prime Video</h2>
-            <img src="https://images.tv.kpn.com/misc/Films/Films_Prime.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Films/Films_Prime.png" width="100%"/>
         </td>
     </tr>
 </table>
@@ -62,37 +62,37 @@
     <tr>
         <td>
             <h2>Series Basispakket</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_Basispakket.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Basispakket.png" width="100%"/>
         </td>
         <td>
             <h2>Series Pluspakket</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_Pluspakket.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Pluspakket.png" width="100%"/>
         </td>
         <td>
             <h2>Series Kids Pakket</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_KidsPakket.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_KidsPakket.png" width="100%"/>
         </td>
         <td>
             <h2>Series Videoland</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Videoland.png" width="100%"/>
         </td>
     </tr>
     <tr>
         <td>
             <h2>Series 4K On Demand</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_4K.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_4K.png" width="100%"/>
         </td>
         <td>
             <h2>Series Netflix</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_Netflix.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Netflix.png" width="100%"/>
         </td>
         <td>
             <h2>Series YouTube</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_YouTube.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_YouTube.png" width="100%"/>
         </td>
         <td>
             <h2>Series Prime Video</h2>
-            <img src="https://images.tv.kpn.com/misc/Series/Series_Prime.jpg" width="100%"/>
+            <img src="https://images.tv.kpn.com/misc/Series/Series_Prime.png" width="100%"/>
         </td>
     </tr>
 </table>
