--- a/films-series/index.html
+++ b/films-series/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <title>Videoland</title>
+    <title>Films & series</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
