Added 2xx/PPV + Walled garden

--- a/films-series/index.html
+++ b/films-series/index.html
@@ -96,5 +96,125 @@
         </td>
     </tr>
 </table>
+<h1>2xx / PPV</h1>
+<table>
+    <tr>
+        <td>
+            <h2>200 Netflix</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/Netflix.png" width="100%"/>
+        </td>
+        <td>
+            <h2>201 Youtube</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/Youtube.png" width="100%"/>
+        </td>
+        <td>
+            <h2>202 Pluspakket</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/Pluspakket.png" width="100%"/>
+        </td>
+        <td>
+            <h2>203 Prime Video</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/Douglas.png" width="100%"/>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h2>50 My Nick Jr.</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/MyNickJunior.png" width="100%"/>
+        </td>
+        <td>
+            <h2>PPV ESPN</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/PPV_ESPN.png" width="100%"/>
+        </td>
+        <td>
+            <h2>PPV Ziggo Sport</h2>
+            <img src="https://images.tv.kpn.com/misc/2XX/PPV_Ziggo.png" width="100%"/>
+        </td>
+    </tr>
+</table>
+<h1>Walled garden</h1>
+<table>
+    <tr>
+        <td>
+            <h2>Opnemen Pakket 1</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-1L0I4S.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Opnemen Pakket 2</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-1L0I51.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Pluspakket 1</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-3UY4EP.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Pluspakket 2</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/2-IB8FQ9.jpg" width="100%"/>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h2>Kids Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-3UY4FT.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Videoland</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-E5BQXM.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Film1</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-E51ML8.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Film1</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/2-IB8FOF.jpg" width="100%"/>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h2>ESPN Compleet 1</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-3UY4EZ.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>ESPN Compleet 2</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-E51MMB.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>ESPN Compleet 3</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-E51MMY.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Ziggo Sport Totaal</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-3UY4F9.jpg" width="100%"/>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h2>Duits Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/2-GVA1PO.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Duits Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/2-HWB7SJ.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Turks Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-1L0I5B.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Hindi Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-DOZL91.jpg" width="100%"/>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <h2>Erotiek Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/1-E0RXNS.jpg" width="100%"/>
+        </td>
+        <td>
+            <h2>Gay Pakket</h2>
+            <img src="https://images.tv.kpn.com/misc/WG/2-IF6OFD.jpg" width="100%"/>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
