Updated Film1 titles

--- a/films-series/index.html
+++ b/films-series/index.html
@@ -161,11 +161,11 @@
             <img src="https://images.tv.kpn.com/misc/WG/1-E5BQXM.jpg" width="100%"/>
         </td>
         <td>
-            <h2>Film1</h2>
+            <h2>Film1 1</h2>
             <img src="https://images.tv.kpn.com/misc/WG/1-E51ML8.jpg" width="100%"/>
         </td>
         <td>
-            <h2>Film1</h2>
+            <h2>Film1 2</h2>
             <img src="https://images.tv.kpn.com/misc/WG/2-IB8FOF.jpg" width="100%"/>
         </td>
     </tr>
