Updated Duits Pakket titles

--- a/films-series/index.html
+++ b/films-series/index.html
@@ -189,11 +189,11 @@
     </tr>
     <tr>
         <td>
-            <h2>Duits Pakket</h2>
+            <h2>Duits Pakket 1</h2>
             <img src="https://images.tv.kpn.com/misc/WG/2-GVA1PO.jpg" width="100%"/>
         </td>
         <td>
-            <h2>Duits Pakket</h2>
+            <h2>Duits Pakket 2</h2>
             <img src="https://images.tv.kpn.com/misc/WG/2-HWB7SJ.jpg" width="100%"/>
         </td>
         <td>
